--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "util": "^0.10.3",
     "cookie": "^0.1.2",
     "connect": "^2.17.1",
-    "session.socket.io": "^0.1.6"
+    "session.socket.io": "^0.1.6",
+    "crypto": "0.0.3"
   }
 }
