--- a/package.json
+++ b/package.json
@@ -4,20 +4,15 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "3.0.x",
-    "any-db": "0.3.x",
+    "any-db": "^0.3.6",
     "hogan.js": "2.0.x",
-    "consolidate": "0.7.x",
-    "sqlite3": "2.1.x",
-    "humanize": "0.0.9",
-    "cookies": "0.4.x",
-    "socket.io": "0.9.x",
-    "passport": "^0.2.0",
-    "connect-flash": "^0.1.1",
-    "passport-local": "^1.0.0",
-    "util": "^0.10.3",
-    "cookie": "^0.1.2",
+    "consolidate": "^0.7.0",
+    "sqlite3": "^2.1.19",
+    "socket.io": "^0.9.17",
     "connect": "^2.17.1",
     "session.socket.io": "^0.1.6",
-    "crypto": "0.0.3"
+    "crypto": "0.0.3",
+    "moment": "^2.6.0",
+    "ect": "^0.5.9"
   }
 }
