--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "Chatroom",
-  "description": "A web-based chatroom server.",
-  "version": "0.0.1",
+  "name": "crisis-flow",
+  "description": "Helping MUN crisis simulations flow smoothly",
+  "version": "0.0.2",
   "dependencies": {
-    "express": "3.0.x",
     "any-db": "^0.3.6",
     "consolidate": "^0.7.0",
     "sqlite3": "^2.1.19",
@@ -12,6 +11,10 @@
     "session.socket.io": "^0.1.6",
     "crypto": "0.0.3",
     "moment": "^2.6.0",
-    "ect": "^0.5.9"
+    "ect": "^0.5.9",
+    "express": "^4.4.4",
+    "cookie-parser": "^1.3.1",
+    "express-session": "^1.5.0",
+    "body-parser": "^1.4.3"
   }
 }
