--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
   "description": "Helping MUN crisis simulations flow smoothly",
   "version": "0.0.2",
   "repository": {
-	"type" : "git",
-	"url" : "http://github.com/ireardon/crisis-flow.git"
+    "type": "git",
+    "url": "http://github.com/ireardon/crisis-flow.git"
   },
   "dependencies": {
-    "any-db": "^0.3.6",
-    "consolidate": "^0.7.0",
-    "sqlite3": "^2.1.19",
+    "body-parser": "^1.4.3",
     "connect": "^2.17.1",
+    "connect-sqlite3": "^0.9.3",
+    "consolidate": "^0.7.0",
+    "cookie": "^0.1.2",
+    "cookie-parser": "^1.3.1",
+    "cookie-signature": "^1.0.5",
     "crypto": "0.0.3",
-    "moment": "^2.6.0",
     "ect": "^0.5.9",
     "express": "^4.4.4",
-    "cookie-parser": "^1.3.1",
     "express-session": "^1.5.0",
-    "body-parser": "^1.4.3",
+    "moment": "^2.6.0",
     "socket.io": "^1.2.1",
-    "connect-sqlite3": "^0.9.3",
-    "cookie": "^0.1.2",
-    "cookie-signature": "^1.0.5"
+    "sqlite3": "^2.2.7"
   }
 }
