--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "url": "http://github.com/ireardon/crisis-flow.git"
   },
   "dependencies": {
-    "body-parser": "^1.4.3",
+    "body-parser": "^1.10.1",
     "connect": "^2.17.1",
+    "connect-busboy": "0.0.2",
     "connect-sqlite3": "^0.9.3",
     "consolidate": "^0.7.0",
     "cookie": "^0.1.2",
@@ -19,6 +20,7 @@
     "express": "^4.4.4",
     "express-session": "^1.5.0",
     "moment": "^2.6.0",
+    "multer": "^0.1.6",
     "socket.io": "^1.2.1",
     "sqlite3": "^2.2.7"
   }
