--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "body-parser": "^1.10.1",
     "connect": "^2.17.1",
-    "connect-busboy": "0.0.2",
     "connect-sqlite3": "^0.9.3",
     "consolidate": "^0.7.0",
     "cookie": "^0.1.2",
@@ -19,6 +18,7 @@
     "ect": "^0.5.9",
     "express": "^4.4.4",
     "express-session": "^1.5.0",
+    "mime": "^1.2.11",
     "moment": "^2.6.0",
     "multer": "^0.1.6",
     "socket.io": "^1.2.1",
