--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "http://github.com/ireardon/crisis-flow.git"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.10.1",
     "connect": "^2.17.1",
