--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "http://github.com/ireardon/crisis-flow.git"
   },
   "scripts": {
-    "start": "node main.js"
+    "start": "bash runserver.sh"
   },
   "dependencies": {
     "body-parser": "^1.10.1",
