--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "dependencies": {
     "body-parser": "^1.10.1",
     "connect": "^2.17.1",
-    "connect-sqlite3": "^0.9.3",
+    "connect-sqlite3": "0.9.4",
     "consolidate": "^0.7.0",
-    "cookie": "^0.1.2",
+    "cookie": "^0.1.3",
     "cookie-parser": "^1.3.1",
     "cookie-signature": "^1.0.5",
-    "crypto": "0.0.3",
     "ect": "^0.5.9",
     "express": "^4.4.4",
     "express-session": "^1.5.0",
@@ -25,6 +24,6 @@
     "moment": "^2.6.0",
     "multer": "^0.1.6",
     "socket.io": "^1.2.1",
-    "sqlite3": "^2.2.7"
+    "sqlite3": "^3.1.0"
   }
 }
