Yea... I changed everything

--- a/.gitignore
+++ b/.gitignore
@@ -30,12 +30,11 @@ build/Release
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
 
+# Mac detritus
+.DS_Store
+
 # Keep TODO file out of repo
 TODO.txt
 
 # Keep user-uploaded content out of repo
 uploads/*
-
-.elasticbeanstalk/
-.ebextensions/
-
